@@ -4,6 +4,6 @@ INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_BINARY_DIR}"
   "${GDCMJPEG_SOURCE_DIR}")
 ADD_LIBRARY(gdcmjpeg12 ${JPEG_SOURCES})
-INSTALL_TARGETS(/lib/ gdcmjpeg12)
+INSTALL_TARGETS(/lib/gdcm/ gdcmjpeg12)
 
 
