@@ -4,5 +4,5 @@ INCLUDE_DIRECTORIES(
   "${CMAKE_CURRENT_BINARY_DIR}"
   "${GDCMJPEG_SOURCE_DIR}")
 ADD_LIBRARY(gdcmjpeg8 ${JPEG_SOURCES})
-INSTALL_TARGETS(/lib/ gdcmjpeg8)
+INSTALL_TARGETS(/lib/gdcm/ gdcmjpeg8)
 
